# focus-cli

./: .gitignore  LICENSE  README.md  SPEC.md  pyproject.toml
src/focus_cli/: __init__.py  __main__.py  cli.py  model.py  presentation.py  storage.py
tests/: test_cli.py  test_presentation.py  test_storage.py
